fix long URLs overflowing page width in footnotes

--- a/_includes/main.css
+++ b/_includes/main.css
@@ -93,3 +93,7 @@ blockquote {
   position: relative;
   top: -0.5em;
 }
+
+.footnotes {
+  word-wrap: break-word;
+}
